Bug 12572: (followup) Small style fix
Boxes show a bit overlapped. This fixes that.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -2772,3 +2772,7 @@ span.browse-button {
     font-size:0.8em;
     padding:0.5em;
 }
+
+#transport-types {
+    padding-top: 0.5px;
+}
